# auth_gate

./: README.md  app.py  config.json  configure.py  pyproject.toml
assets/configurator/: index-eawWUFNV.js  index-kC4d3Nni.js
configurator/: index.html  package.json
configurator/src/: App.tsx
configurator/src/components/: Configurator.tsx
templates/: configure.html  index.html  welcome.html
