[tool.poetry]
name = "auth-gate"
version = "0.1.0"
description = "A simple authentication gateway for Traefik ForwardAuth written in Python."
authors = ["Dalton Ma <85321730+bohrium2b@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.1.0"
authlib = "^1.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
